--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "edfa-composer-with-dev-dependencies",
+    "name": "vendor/efda",
     "description": "An example project to test dependency analysis tools with different dependencies specified in composer composer.json.",
     "type": "project",
     "require": {
