--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,7 @@ jobs:
       - run: apt install curl php-cli php-mbstring git unzip php-xml php-curl -y
       - run: curl -sS https://getcomposer.org/installer -o composer-setup.php
       - run: php composer-setup.php --install-dir=/usr/local/bin --filename=composer
-      - run: composer install -n --prefer-dist
+      - run: |
+          composer install -n --prefer-dist
+          composer show -ti
       - run: composer show --tree
