--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
 
       - run: apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: apt install curl php-cli php-mbstring git unzip php-xml php-curl -y
+      - run: apt install curl -y
       - run: curl -sS https://getcomposer.org/installer -o composer-setup.php
       - run: php composer-setup.php --install-dir=/usr/local/bin --filename=composer
       - run: |
